Bug 55355 - TextIterator should not be a friend of RenderTextControl
Summary: TextIterator should not be a friend of RenderTextControl
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 54179
  Show dependency treegraph
 
Reported: 2011-02-28 00:13 PST by Roland Steiner
Modified: 2011-02-28 00:45 PST (History)
4 users (show)

See Also:


Attachments
Patch (1.67 KB, patch)
2011-02-28 00:18 PST, Roland Steiner
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Steiner 2011-02-28 00:13:08 PST
TextIterator should use interface methods rather than being a friend.
Comment 1 Roland Steiner 2011-02-28 00:18:31 PST
Created attachment 84024 [details]
Patch

Simple patch: remove need for friend-clause by making innerTextElement() public. Even after the general new-shadow-DOM refactoring there will be a common inner text element, so the accessor will likely stay around. We might want to restrict visibility of the shadow DOM from RenderTextControl, but this is for yet another (larger) refactoring.
Comment 2 Kent Tamura 2011-02-28 00:23:10 PST
Comment on attachment 84024 [details]
Patch

looks good.
Comment 3 WebKit Commit Bot 2011-02-28 00:45:40 PST
Comment on attachment 84024 [details]
Patch

Clearing flags on attachment: 84024

Committed r79845: <http://trac.webkit.org/changeset/79845>
Comment 4 WebKit Commit Bot 2011-02-28 00:45:45 PST
All reviewed patches have been landed.  Closing bug.