2011-02-28  Roland Steiner  <rolandsteiner@chromium.org>

Reviewed by Kent Tamura.

        Bug 55355 - TextIterator should not be a friend of RenderTextControl
        https://bugs.webkit.org/show_bug.cgi?id=55355

        Remove need for 'friend' clause by making innerTextElement() public.

        No new tests. (simple refactoring)

        * rendering/RenderTextControl.h:

Canonical link: https://commits.webkit.org/69762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79845 268f45cc-cd09-0410-ab3c-d52691b4dbfc